--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=MedConnect
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MedConnect;encrypt=true;trustServerCertificate=true
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.username=sa
+spring.datasource.password=Abcd1234!
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
