--- a/medconnect-fe/package.json
+++ b/medconnect-fe/package.json
@@ -28,7 +28,8 @@
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-slick": "^0.31.0"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
