--- a/medconnect-fe/package.json
+++ b/medconnect-fe/package.json
@@ -23,6 +23,7 @@
     "@heroui/theme": "2.4.22",
     "@react-aria/visually-hidden": "3.8.27",
     "clsx": "2.1.1",
+    "firebase": "^12.3.0",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
