--- a/medconnect-fe/package.json
+++ b/medconnect-fe/package.json
@@ -21,10 +21,11 @@
     "@heroui/switch": "2.2.23",
     "@heroui/system": "2.4.22",
     "@heroui/theme": "2.4.22",
+    "@nextui-org/react": "^2.6.11",
     "@react-aria/visually-hidden": "3.8.27",
     "clsx": "2.1.1",
     "firebase": "^12.3.0",
-    "framer-motion": "11.18.2",
+    "framer-motion": "^11.18.2",
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
     "next-themes": "0.4.6",
