--- a/medconnect-be/pom.xml
+++ b/medconnect-be/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>firebase-admin</artifactId>
             <version>9.7.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
