feat: adding env and fix firebase variables

--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 spring.application.name=MedConnect
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MedConnect;encrypt=true;trustServerCertificate=true
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.username=sa
-spring.datasource.password=Abcd1234!
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
-firebase.config.path=C:/Users/Win11/Downloads/medconnect-2eaff-firebase-adminsdk-fbsvc-992457e079.json
+firebase.type=${FIREBASE_TYPE}
+firebase.project-id=${FIREBASE_PROJECT_ID}
+firebase.private-key-id=${FIREBASE_PRIVATE_KEY_ID}
+firebase.private-key=${FIREBASE_PRIVATE_KEY}
+firebase.client-email=${FIREBASE_CLIENT_EMAIL}
+firebase.client-id=${FIREBASE_CLIENT_ID}
+firebase.auth-uri=${FIREBASE_AUTH_URI}
+firebase.token-uri=${FIREBASE_TOKEN_URI}
+firebase.auth-provider-x509-cert-url=${FIREBASE_AUTH_PROVIDER_X509_CERT_URL}
+firebase.client-x509-cert-url=${FIREBASE_CLIENT_X509_CERT_URL}
+firebase.universe-domain=${FIREBASE_UNIVERSE_DOMAIN}
