--- a/medconnect-be/pom.xml
+++ b/medconnect-be/pom.xml
@@ -72,11 +72,10 @@
             <artifactId>firebase-admin</artifactId>
             <version>9.7.0</version>
         </dependency>
-
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>test</scope>
+        <groupId>me.paulschwarz</groupId>
+        <artifactId>spring-dotenv</artifactId>
+        <version>3.0.0</version>
         </dependency>
     </dependencies>
 
