--- a/medconnect-be/pom.xml
+++ b/medconnect-be/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>firebase-admin</artifactId>
             <version>9.7.0</version>
         </dependency>
+        <dependency>
+        <groupId>me.paulschwarz</groupId>
+        <artifactId>spring-dotenv</artifactId>
+        <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
