--- a/medconnect-fe/package.json
+++ b/medconnect-fe/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@heroui/button": "2.2.26",
     "@heroui/code": "2.2.20",
     "@heroui/input": "2.4.27",
