--- a/medconnect-fe/package.json
+++ b/medconnect-fe/package.json
@@ -31,6 +31,7 @@
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
     "next-themes": "0.4.6",
+    "nextjs-toploader": "^3.9.17",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-slick": "^0.31.0"
