--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Dependencies
+node_modules/
+target/
+
+# Next.js
+.next/
+out/
+build/
+
+# Docker
+docker-compose.override.yml
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
-.idea
-.vscode
+Thumbs.db
