--- a/medconnect-fe/.dockerignore
+++ b/medconnect-fe/.dockerignore
@@ -39,3 +39,6 @@ pnpm-lock.yaml
 yarn.lock
 package-lock.json
 bun.lockb
+
+# Don't ignore .env.production - we need it for build
+# .env.production
