--- a/medconnect-fe/package.json
+++ b/medconnect-fe/package.json
@@ -34,7 +34,8 @@
     "nextjs-toploader": "^3.9.17",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-slick": "^0.31.0"
+    "react-slick": "^0.31.0",
+    "resend": "^6.1.3"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
