--- a/medconnect-fe/package.json
+++ b/medconnect-fe/package.json
@@ -29,6 +29,7 @@
     "firebase": "^12.3.0",
     "framer-motion": "^11.18.2",
     "intl-messageformat": "10.7.16",
+    "lucide-react": "^0.546.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "nextjs-toploader": "^3.9.17",
