--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         # Start SQL Server in background
         /opt/mssql/bin/sqlservr &
         
-        # Wait for SQL Server to be ready...
+        # Wait for SQL Server to be ready
         echo "Waiting for SQL Server to start..."
         for i in {1..50}; do
           /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P "MedConnectG1SE1961NJ" -C -Q "SELECT 1" > /dev/null 2>&1
