--- a/medconnect-fe/Dockerfile
+++ b/medconnect-fe/Dockerfile
@@ -1,38 +1,28 @@
-# ---------- Stage 1: Build ----------
+# syntax=docker/dockerfile:1.7
+# ---------- Stage 1: deps ----------
 FROM node:20-alpine AS deps
-RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+# dùng cache npm
+RUN --mount=type=cache,target=/root/.npm npm ci
 
+# ---------- Stage 2: build ----------
 FROM node:20-alpine AS builder
 WORKDIR /app
+ENV NEXT_DISABLE_ESLINT=1 NEXT_TELEMETRY_DISABLED=1
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+# cache Next build
+RUN --mount=type=cache,target=/app/.next/cache npm run build
 
-ENV NEXT_TELEMETRY_DISABLED=1
-
-# Build sẽ tự động đọc .env.production từ COPY . . ở trên
-RUN npm run build
-
-# ---------- Stage 2: Runner ----------
+# ---------- Stage 3: runner ----------
 FROM node:20-alpine AS runner
 WORKDIR /app
-
-ENV NODE_ENV=production
-ENV NEXT_TELEMETRY_DISABLED=1
-
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-
+ENV NODE_ENV=production NEXT_TELEMETRY_DISABLED=1 PORT=3000 HOSTNAME=0.0.0.0
+RUN addgroup --system --gid 1001 nodejs && adduser --system --uid 1001 nextjs
 COPY --from=builder /app/public ./public
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-
 USER nextjs
 EXPOSE 3000
-
-ENV PORT=3000
-ENV HOSTNAME="0.0.0.0"
-
-CMD ["node", "server.js"]
+CMD ["node","server.js"]
