--- a/Caddyfile
+++ b/Caddyfile
@@ -1,9 +1,9 @@
-http://143.198.220.198 {
+medconnects.app, www.medconnects.app {
     encode zstd gzip
     reverse_proxy fe:3000
 }
 
-http://143.198.220.198:8080 {
+api.medconnects.app {
     encode zstd gzip
     reverse_proxy be:8080
 }
