fix: unicode in db

--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
+# Force use NVARCHAR instead of VARCHAR for Unicode support (Vietnamese)
+spring.jpa.properties.hibernate.use_nationalized_character_data=true
+
 firebase.type=${FIREBASE_TYPE}
 firebase.project-id=${FIREBASE_PROJECT_ID}
 firebase.private-key-id=${FIREBASE_PRIVATE_KEY_ID}
