--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -22,3 +22,8 @@ firebase.token-uri=${FIREBASE_TOKEN_URI}
 firebase.auth-provider-x509-cert-url=${FIREBASE_AUTH_PROVIDER_X509_CERT_URL}
 firebase.client-x509-cert-url=${FIREBASE_CLIENT_X509_CERT_URL}
 firebase.universe-domain=${FIREBASE_UNIVERSE_DOMAIN}
+
+# Cloudinary Configuration
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api-key=${CLOUDINARY_API_KEY}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET}
