feat: email service

--- a/medconnect-be/pom.xml
+++ b/medconnect-be/pom.xml
@@ -91,6 +91,13 @@
             <artifactId>cloudinary-http44</artifactId>
             <version>1.38.0</version>
         </dependency>
+
+        <!-- Resend for email service -->
+        <dependency>
+            <groupId>com.resend</groupId>
+            <artifactId>resend-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
