--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -27,3 +27,8 @@ firebase.universe-domain=${FIREBASE_UNIVERSE_DOMAIN}
 cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api-key=${CLOUDINARY_API_KEY}
 cloudinary.api-secret=${CLOUDINARY_API_SECRET}
+
+# Resend Email Configuration
+resend.api-key=${RESEND_API_KEY}
+resend.from-email=MedConnect <noreply@mail.medconnects.app>
+resend.from-name=MedConnect
