chore: config appointment

--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -32,3 +32,9 @@ cloudinary.api-secret=${CLOUDINARY_API_SECRET}
 resend.api-key=${RESEND_API_KEY}
 resend.from-email=MedConnect <noreply@mail.medconnects.app>
 resend.from-name=MedConnect
+
+# SePay Payment Gateway Configuration
+sepay.merchant.id=${SEPAY_MERCHANT_ID}
+sepay.secret.key=${SEPAY_SECRET_KEY}
+sepay.api.url=https://sandbox-pay.sepay.vn/v1/checkout/init
+app.base.url=${APP_BASE_URL:http://localhost:3000}
