--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -38,3 +38,9 @@ sepay.merchant.id=${SEPAY_MERCHANT_ID}
 sepay.secret.key=${SEPAY_SECRET_KEY}
 sepay.api.url=https://sandbox-pay.sepay.vn/v1/checkout/init
 app.base.url=${APP_BASE_URL:http://localhost:3000}
+
+# expose health/info
+management.endpoints.web.exposure.include=health,info
+# thêm probe cho k8s/monitor (optional)
+management.endpoint.health.probes.enabled=true
+management.endpoints.web.base-path=/actuator
