change se pay yo vnpay

--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -33,14 +33,14 @@ resend.api-key=${RESEND_API_KEY}
 resend.from-email=MedConnect <noreply@mail.medconnects.app>
 resend.from-name=MedConnect
 
-# SePay Payment Gateway Configuration
-sepay.merchant.id=${SEPAY_MERCHANT_ID}
-sepay.secret.key=${SEPAY_SECRET_KEY}
-sepay.api.url=https://sandbox-pay.sepay.vn/v1/checkout/init
-app.base.url=${APP_BASE_URL:http://localhost:3000}
-
 # expose health/info
 management.endpoints.web.exposure.include=health,info
 # thêm probe cho k8s/monitor (optional)
 management.endpoint.health.probes.enabled=true
 management.endpoints.web.base-path=/actuator
+
+vnpay.tmnCode=${VNPAY_TMN_CODE}
+vnpay.hashSecret=${VNPAY_HASH_SECRET}
+vnpay.url=${VNPAY_PAY_URL}
+vnpay.returnUrl=${VNPAY_RETURN_URL}
+vnpay.ipnUrl=${VNPAY_IPN_URL}
