feat: configure video call

--- a/medconnect-fe/package.json
+++ b/medconnect-fe/package.json
@@ -25,6 +25,7 @@
     "@heroui/theme": "2.4.22",
     "@nextui-org/react": "^2.6.11",
     "@react-aria/visually-hidden": "3.8.27",
+    "agora-rtc-sdk-ng": "^4.24.0",
     "clsx": "2.1.1",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.24",
@@ -37,7 +38,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-slick": "^0.31.0",
-    "resend": "^6.1.3"
+    "resend": "^6.1.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
