--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -44,3 +44,7 @@ vnpay.hashSecret=${VNPAY_HASH_SECRET}
 vnpay.url=${VNPAY_PAY_URL}
 vnpay.returnUrl=${VNPAY_RETURN_URL}
 vnpay.ipnUrl=${VNPAY_IPN_URL}
+
+# Agora Video Call Configuration
+agora.app-id=${AGORA_APP_ID:}
+agora.app-certificate=${AGORA_APP_CERTIFICATE:}
