fix: camera issues

--- a/ENV.template
+++ b/ENV.template
@@ -58,3 +58,10 @@ SEPAY_SECRET_KEY=your-sepay-secret-key
 # ----------------------------------------------
 APP_BASE_URL=https://medconnects.app
 
+# ----------------------------------------------
+# Agora Video Call
+# ----------------------------------------------
+AGORA_APP_ID=your-agora-app-id
+AGORA_APP_CERTIFICATE=your-agora-app-certificate
+NEXT_PUBLIC_AGORA_APP_ID=your-agora-app-id
+
