--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,32 +5,39 @@
 # Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+# stages:
+#   - deploy
+
+# deploy_to_droplet:
+#   stage: deploy
+#   image: alpine:3.20
+#   only:
+#     - main
+#   before_script:
+#     - apk add --no-cache openssh-client git
+#     - eval $(ssh-agent -s)
+#     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+#     - mkdir -p ~/.ssh
+#     - chmod 700 ~/.ssh
+#     - ssh-keyscan -H "$DEPLOY_HOST" >> ~/.ssh/known_hosts
+#   script:
+#     - |
+#       ssh "$DEPLOY_USER@$DEPLOY_HOST" << 'EOSSH'
+#       set -e
+#       cd "$DEPLOY_PATH"
+#       git fetch origin
+#       git checkout main
+#       git pull --ff-only
+
+#       docker compose build
+#       docker compose up -d
+
+#       docker compose ps
+#       EOSSH
+
 stages:
-  - deploy
-
-deploy_to_droplet:
-  stage: deploy
-  image: alpine:3.20
-  only:
-    - main
-  before_script:
-    - apk add --no-cache openssh-client git
-    - eval $(ssh-agent -s)
-    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - ssh-keyscan -H "$DEPLOY_HOST" >> ~/.ssh/known_hosts
-  script:
-    - |
-      ssh "$DEPLOY_USER@$DEPLOY_HOST" << 'EOSSH'
-      set -e
-      cd "$DEPLOY_PATH"
-      git fetch origin
-      git checkout main
-      git pull --ff-only
-
-      docker compose build
-      docker compose up -d
-
-      docker compose ps
-      EOSSH
+- test
+sast:
+  stage: test
+include:
+- template: Security/SAST.gitlab-ci.yml
