feat: mail service

--- a/medconnect-fe/jsconfig.json
+++ b/medconnect-fe/jsconfig.json
@@ -4,5 +4,11 @@
     "paths": {
       "@/*": ["./*"]
     }
-  }
+  },
+  "exclude": [
+    "node_modules",
+    ".next",
+    "out",
+    "build"
+  ]
 }
