--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -48,3 +48,4 @@ vnpay.ipnUrl=${VNPAY_IPN_URL}
 # Agora Video Call Configuration
 agora.app-id=${AGORA_APP_ID:}
 agora.app-certificate=${AGORA_CERTIFICATE:}
+gemini.api-key=${GEMINI_API_KEY}
