feat: fix deployment

--- a/medconnect-be/Dockerfile
+++ b/medconnect-be/Dockerfile
@@ -18,19 +18,30 @@ FROM eclipse-temurin:21-jre-alpine
 
 WORKDIR /app
 
+# Install wget, curl, and netcat for health check and database wait
+RUN apk add --no-cache wget curl netcat-openbsd
+
 # Create non-root user for security
 RUN addgroup -S spring && adduser -S spring -G spring
-USER spring:spring
+
+# Copy wait script
+COPY wait-for-db.sh /app/wait-for-db.sh
+RUN chmod +x /app/wait-for-db.sh
 
 # Copy the built JAR from build stage
 COPY --from=build /app/target/*.jar app.jar
+
+# Change ownership
+RUN chown -R spring:spring /app
+
+USER spring:spring
 
 # Expose port
 EXPOSE 8080
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=3s --start-period=120s --retries=5 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1
 
-# Run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Run the application with wait script
+ENTRYPOINT ["sh", "-c", "/app/wait-for-db.sh && java -jar app.jar"]
