--- a/medconnect-be/src/main/resources/application.properties
+++ b/medconnect-be/src/main/resources/application.properties
@@ -1,12 +1,23 @@
 spring.application.name=MedConnect
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MedConnect;encrypt=true;trustServerCertificate=true
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:sqlserver://localhost:1433;databaseName=MedConnect;encrypt=true;trustServerCertificate=true}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
+# Connection pool settings
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.leak-detection-threshold=60000
+
+# JPA/Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Force use NVARCHAR instead of VARCHAR for Unicode support (Vietnamese)
 spring.jpa.properties.hibernate.use_nationalized_character_data=true
@@ -48,4 +59,4 @@ vnpay.ipnUrl=${VNPAY_IPN_URL}
 # Agora Video Call Configuration
 agora.app-id=${AGORA_APP_ID:}
 agora.app-certificate=${AGORA_CERTIFICATE:}
-gemini.api-key=${GEMINI_API_KEY}
+gemini.api-key=${GEMINI_API_KEY:}
