feat: refractor code

--- a/ENV.template
+++ b/ENV.template
@@ -39,6 +39,7 @@ CLOUDINARY_API_SECRET=your-cloudinary-api-secret
 # ----------------------------------------------
 # Gemini AI Configuration (Optional)
 # ----------------------------------------------
+GEMINI_API_KEY=AIzaSyXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 # ----------------------------------------------
@@ -47,21 +48,42 @@ NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 RESEND_API_KEY=re_XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 # ----------------------------------------------
-# Payment Gateway (Optional - SePay)
+# Payment Gateway - VNPay
 # ----------------------------------------------
-SEPAY_MERCHANT_ID=your-merchant-id
-SEPAY_API_KEY=your-sepay-api-key
-SEPAY_SECRET_KEY=your-sepay-secret-key
+VNPAY_TMN_CODE=your-tmn-code
+VNPAY_HASH_SECRET=your-hash-secret
+VNPAY_PAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_RETURN_URL=https://medconnects.app/thanh-toan/callback
+VNPAY_IPN_URL=https://api.medconnects.app/api/payment/ipn
 
 # ----------------------------------------------
-# Application URLs
+# Application URLs (QUAN TRỌNG!)
 # ----------------------------------------------
 APP_BASE_URL=https://medconnects.app
+NEXT_PUBLIC_API_URL=https://api.medconnects.app/api
 
 # ----------------------------------------------
 # Agora Video Call
 # ----------------------------------------------
 AGORA_APP_ID=your-agora-app-id
-AGORA_APP_CERTIFICATE=your-agora-app-certificate
+AGORA_CERTIFICATE=your-agora-certificate
 NEXT_PUBLIC_AGORA_APP_ID=your-agora-app-id
+
+# ----------------------------------------------
+# Database Configuration
+# ----------------------------------------------
+DB_SA_PASSWORD=MedConnect@2025
+DB_USER=sa
+DB_PASSWORD=MedConnect@2025
+
+# ----------------------------------------------
+# Spring Profiles
+# ----------------------------------------------
+SPRING_PROFILES_ACTIVE=prod
+
+# ----------------------------------------------
+# Geoapify (Maps) - Optional
+# ----------------------------------------------
+GEOAPIFY_API_KEY=your-geoapify-api-key
+NEXT_PUBLIC_GEOAPIFY_API_KEY=your-geoapify-api-key
 
