--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,71 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/user/application_security/secret_detection/pipeline/configure
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
 - test
+  - deploy
+
+# SAST Security Scanning
 sast:
   stage: test
 include:
 - template: Security/SAST.gitlab-ci.yml
+
+# Deploy to VPS (only on main branch)
+deploy:
+  stage: deploy
+  image: alpine:latest
+  before_script:
+    # Install SSH client
+    - apk add --no-cache openssh-client
+    # Setup SSH
+    - mkdir -p ~/.ssh
+    - echo "$VPS_SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
+    - ssh-keyscan -H $VPS_HOST >> ~/.ssh/known_hosts
+    # Verify SSH connection
+    - ssh -o StrictHostKeyChecking=no $VPS_USER@$VPS_HOST "echo 'SSH connection successful'"
+  script:
+    - |
+      echo "🚀 Starting deployment to VPS..."
+      
+      # Set deploy path (default to /apps/g1-se1961-nj-swp391-fal25 if not set)
+      DEPLOY_PATH=${VPS_DEPLOY_PATH:-/apps/g1-se1961-nj-swp391-fal25}
+      
+      # SSH into VPS and execute deployment commands
+      ssh -o StrictHostKeyChecking=no $VPS_USER@$VPS_HOST "DEPLOY_PATH='$DEPLOY_PATH' bash -s" << 'ENDSSH'
+        set -e  # Exit on error
+        
+        echo "📂 Changing to project directory: $DEPLOY_PATH"
+        cd "$DEPLOY_PATH" || { echo "❌ Directory not found: $DEPLOY_PATH"; exit 1; }
+        
+        echo "📥 Pulling latest code from GitLab..."
+        git fetch origin
+        git reset --hard origin/main
+        git clean -fd
+        
+        echo "🛑 Stopping existing containers..."
+        docker compose --profile production down || echo "⚠️ No containers to stop"
+        
+        echo "🔨 Building Docker images..."
+        docker compose --profile production build --no-cache
+        
+        echo "🚀 Starting containers..."
+        docker compose --profile production up -d
+        
+        echo "⏳ Waiting for services to be healthy..."
+        sleep 10
+        
+        echo "📊 Checking container status..."
+        docker ps --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
+        
+        echo "✅ Deployment completed successfully!"
+      ENDSSH
+      
+      echo "🎉 Deployment finished!"
+  after_script:
+    # Cleanup SSH key
+    - rm -f ~/.ssh/id_rsa
+  only:
+    - main
+  when: on_success
+  environment:
+    name: production
+    url: https://medconnects.app
