--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
 stages:
-- test
+  - test
   - deploy
 
-# SAST Security Scanning
-sast:
-  stage: test
 include:
-- template: Security/SAST.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
+
+# SAST Security Scanning (override from template if needed)
+# The template already defines sast job with stage: test
 
 # Deploy to VPS (only on main branch)
 deploy:
